--- a/Workshop01.html
+++ b/Workshop01.html
@@ -3,47 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Service 1.0</title>
-    <link rel="shortcut icon" href="./Favicon/Favicon (3).png" type="image/png">
+    <title>Online Services</title>
+    <link rel="shortcut icon" href="./Favicon/Favicon (3).png">
+    <link rel="stylesheet" href="./WS01_style.css">
+    <link rel="stylesheet" href="./WS02_style.css">
 </head>
-    <img src="./Images/d49cef1e-100f-4ab2-8709-4701f1949529.png" alt="">
+    <tr align = "center">
+        <div class="container">
+            <img src="./Images/Online_Servives.png" alt="Logo"></div>
+            <h1 style="text-align: center;">Online Services 1.0</h1>
+            <h2 style="text-align: center;">"ชำระค่าสาธารณูปโภคหลากหลายเพื่อความสะดวกของคุณ"</h2>
+    </tr>
 <body>
-    <h1 style="text-align: center;">Online Services 1.0</h1>
-    <h2 style="tex-align: center;">"ชำระค่าสาธารณูปโภคหลากหลายเพื่อความสะดวกของคุณ"</h2>
+    <hr>
     <br><br>
-    รหัสประจำตัวประชาชน<input type="number" style="text-align: center;">
-    <br><br>
-    คำนำหน้า    
-    <input type="radio" name="" id="" value="male" checked> นาย
-    <input type="radio" name="" id="" value="female"> นางสาว
-    <input type="radio" name="" id="" value="other"> นาง
-    <br><br>
-    ชื่อ-สกุล <input type="text">
-    <br><br>
-    ชำระค่าสาธารณูปโภค
-    <input type="checkbox">ประปา <input type="number" name="" id="">
-    <br><br>
-    <input type="checkbox">ไฟฟ้า <input type="number" name="" id="">
-    <br><br>
-    ชำระค่าโทรศัพท์
-    <input type="checkbox">โทรศัพท์บ้าน <input type="number" name="" id="">
-    <br><br>
-    <input type="checkbox">AIS <input type="number" name="" id="">
-    <br><br>
-    <input type="checkbox">DTAC <input type="number" name="" id="">
-    <br><br>
-    <input type="checkbox">TRUE <input type="number" name="" id="">
-    <br><br>
-    ส่วนลดเฉพาะค่าสาธรณูปโภค
-    <select name="" id="">
-        <option value="111" selected>ไม่มีส่วนลด</option>
-        <option value="222">ลด5%</option>
-        <option value="333">ลด10%</option>
-    </select>
-    <br><br>
-    <input type="submit" value="ตกลง">
-    <input type="reset" value="ยกเลิก">
-    <br><br>
-    หมายเหตุ ค่าบริการคิด 15 บาทต่อรายการ โดยคิดเฉพาะชำระค่าโทรศัพท์เท่านั้น
+    <table border="0" align="center">
+        <tr>
+            <td id="aa">รหัสประจำตัวประชาชน</td>
+            <td><input type="number" id="idCard" ></td>
+        </tr>
+        <tr>
+            <td id="aa">คำนำหน้า</td>
+            <td><input type="radio" name="gender" id="" value="male">ชาย
+            <input type="radio" name="gender" id="" value="female">หญิง
+            <input type="radio" name="gender" id="" value="female">นางสาว</td>
+        </tr>
+        <tr>
+            <td id="aa">ชื่อ-สกุล</td>
+            <td><input type="text" name="" id=""></td>
+        </tr>
+        <tr>
+            <td id="aa">ค่าสาธารณูปโภค</td>
+            <td> <input type="checkbox" name="" id=""> ประปา
+            <input type="text"> บาท</td>
+        </tr>
+        <tr>
+            <td id="aa"></td>
+            <td> <input type="checkbox" name="" id=""> ไฟฟ้า
+                <input type="text"> บาท</td>
+        </tr>
+        <tr>
+            <td id="aa">ชำระค่าโทรศัพท์</td>
+            <td id="aa"> <input type="checkbox" name="" id=""> โทรศัพท์บ้าน
+            <input type="text"> บาท</td>
+        </tr>
+        <tr>
+            <td id="aa"></td>
+            <td> <input type="checkbox" name="" id=""> AIS
+                <input type="text"> บาท</td>
+        </tr>
+        <tr>
+            <td id="aa"></td>
+            <td> <input type="checkbox" name="" id=""> DTAC
+                <input type="text"> บาท</td>
+        </tr>
+        <tr>
+            <td id="aa"></td>
+            <td> <input type="checkbox" name="" id=""> TRUE
+                <input type="text"> บาท</td>
+        </tr>
+        <tr>
+            <td id="aa">ส่วนลดเฉพาะค่าสาธารณูปโภค</td>
+            <td>
+                <select name="" id="">
+                    <option value="111">ไม่มีส่วนลด</option>
+                    <option value="222">5%</option>
+                    <option value="333">10%</option>
+                    <option value="444">15%</option>
+                </select>
+            </td>
+        </tr>
+    </table>
+    <hr>
+    <table border="0" align="center">
+        <tr>
+            <td>   
+            <form action="" method="">
+            <button type="submit">ชำระค่าบริการ</button>
+            <button type="reset">ยกเลิก</button>
+            </form>
+        </td>
+        </tr>
+    </table>
+    <br>
+    <p id="cc"> <u> <strong>หมายเหตุ</strong></u> ค่าบริการ 15 บาทต่อรายการ โดยคิดเฉพาะค่าโทรศัพท์เท่านั้น</p> 
 </body>
 </html>
